[package]
name = "onemax"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
chrono = "0.4.40"
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
field_names = "0.2.0"
lazy_static = "1.5.0"
log = "0.4.26"
rand = "0.9.0"
serde_json = "1.0.140"
struct-field-names-as-array = "0.3.0"
syn = "2.0.100"

[dev-dependencies]
criterion = "0.3"
cargo-llvm-cov = "0.6.16"

[env]
RUSTFLAGS = "-A unused"

[[bench]]
name = "first_improvement"
harness = false
